[package]
name = "agave-swqos-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-streamer = "2.3.6"
solana-rpc-client = "2.3.6"

solana-quic-definitions = "2.3.1"
solana-sdk = "2.3.1"
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["full"] }
quinn = "0.11.8"
clap = {version = "4.5.42", features = ["derive"]}
serde = "1.0.219"
serde_json = "1.0.142"
